docs/sample/ingress-controller-tls/deployment-app-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-two
  labels:
    app: busybox-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-two
  template:
    metadata:
      labels:
        app: busybox-two
    spec:
      containers:
      - name: busybox
        image: k8s.gcr.io/e2e-test-images/busybox:1.29
        command:
          - "/bin/sh"
          - "10000"
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-tls"
            nodePublishSecretRef:
              name: secrets-store-creds
---
apiVersion: v1
kind: Service
metadata:
  name: busybox-two
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: busybox-two
